retrieveUnpackaged/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Addition_of_Workflow_Requirement__c</fullName>
        <description>Additional workflow requirement, i.e., addition of workflow to a heretofore fill and print form.</description>
        <inlineHelpText>Additional workflow requirement, i.e., addition of workflow to a heretofore fill and print form.</inlineHelpText>
        <label>Addition of Workflow Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Availability_External_Requirement__c</fullName>
        <description>Does the data need to be exported or integrated into another system? Is searching, bulk upload, etc. required?</description>
        <inlineHelpText>Does the data need to be exported or integrated into another system? Is searching, bulk upload, etc. required?</inlineHelpText>
        <label>Data Availability External Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electronic_Signature_Requirement__c</fullName>
        <description>Electronic signature requirement.</description>
        <inlineHelpText>Electronic signature requirement.</inlineHelpText>
        <label>Electronic Signature Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FY_16_Usage__c</fullName>
        <label>FY 16 Usage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY_17_Usage_Count__c</fullName>
        <label>FY 17 Usage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Number__c</fullName>
        <label>Form Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highly_Formatted_Input_Requirement__c</fullName>
        <description>Highly formatted data entry requirement.</description>
        <inlineHelpText>Highly formatted data entry requirement.</inlineHelpText>
        <label>Highly Formatted Input Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner is willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highly_Formatted_Output_Requirement__c</fullName>
        <description>Print to .pdf in exactly the same layout of the form?</description>
        <inlineHelpText>Print to .pdf in exactly the same layout of the form?</inlineHelpText>
        <label>Highly Formatted Output Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Required</fullName>
                </value>
                <value>
                    <fullName>1: Desired if no cost to owner</fullName>
                </value>
                <value>
                    <fullName>2: Required and owner willing to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_Priority__c</fullName>
        <label>Migration Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1: High Priority - Will Definitely Migrate</fullName>
                </value>
                <value>
                    <fullName>2: Medium Priority - Will Probably Migrate</fullName>
                </value>
                <value>
                    <fullName>3: Low Priority - Probably Will Not Migrate</fullName>
                </value>
                <value>
                    <fullName>0: Not a Priority - Will Not Migrate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_Status__c</fullName>
        <label>Migration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Do Not Migrate</fullName>
                </value>
                <value>
                    <fullName>Known</fullName>
                </value>
                <value>
                    <fullName>Orphan</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responsible_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Org</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Object_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Fill and Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>Candidate_Application</fullName>
        <active>true</active>
        <label>Candidate Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Forms_Inventory</fullName>
        <active>true</active>
        <label>Forms Inventory</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>